fixed container overflow at top of header

--- a/less/index.less
+++ b/less/index.less
@@ -225,8 +225,22 @@ p {
 	}
 }
 
+.fixed {
+	overflow: hidden;
+	position: fixed;
+	top: 0;
+	background-color: #333;
+	width: 70%;
+	margin: 0 auto;
+	margin-left: -20px;
+	text-align: center;
+	border-bottom-left-radius: 3%;
+	border-bottom-right-radius: 3%;
+}
+
+
 /************************
-***** NESTED STYLING*****
+**** NESTED STYLING *****
 *************************/
 
 nav {
@@ -436,19 +450,3 @@ table {
 		padding: 1%;
 	} //close TD
 } // close table
-
-/************************
-*****  OTHER STYLING*****
-*************************/
-
-.fixed {
-	overflow: hidden;
-	position: fixed;
-	top: 0;
-	background-color: #333;
-	width: 70%;
-	margin: 0 auto;
-	margin-left: -20px;
-	text-align: center;
-	border-radius: 3%;
-}
